--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: node_js
 node_js:
   - "stable"
+install: yarn
 cache:
   directories:
     - node_modules
-script:
-  - npm test
-  - npm run build
+script: yarn test
 on:
   branch: master
